Citations from important reports done yesterday night

--- a/paper-v1.tex
+++ b/paper-v1.tex
@@ -48,18 +48,62 @@ Peer-review is a necessary and essential quality control step for scientific pub
 %
 \section{Introduction}
 blockchain for science here and application to open science and to peer review as a specific case
+to cite "" The essence of blockchain is that it allows transactions of value without intermediaries, and can enable decentralised business models." "
 
+Dr. Soenke Bartling is a German radiologist and founder of Blockchain for Science2, a think tank based in Berlin. Launched in 2016, its aim is to ‘open up science and knowledge creation by means of the blockchain (r)evolution’. Besides meetings, hackathons3 and stimulating knowledge sharing through its online platform, the organisation also launched and maintains a living document4 on blockchain and science, collecting ideas on how blockchain could open up science and knowledge creation.
+
+\begin{itemize}
+\item reproducibility crisis (a fix)
+\item openness of access and data 
+\item 'blockchainefied science':  "a more flexible, grass-root and reputation-based governance of science."
+\end{itemize}
+reputation metrics -- "blockchain would make much larger parts of the research cycle open to scientific self-correction. This bears the potential to be a new approach to the current reproducibility crisis in science, and could ‘reduce waste and make more research results true’. Beyond that, blockchain could be used to reduce overhead and accelerate the scientific process and incentivise true innovation." https://docs.google.com/document/d/1Uhjb4K69l0bSx7UXYUStV_rjuPC7VGo0ERa-7xEsr58/edit#heading=h.z4w0uvttpvgt
+Decentralized
+Distributed 
+Immutable (≈’append only database’)
+Transparent (provable to the external world)
+"One such system, the Ethereum blockchain, goes so far as to provide its own programming language to run distributed, unstoppable, and provable applications [27]. This includes smart contracts [28] which can be used to realize distributed, autonomous applications and organizations [29]." they propose permissioned public blockchain for science
+"Figure 3: Large parts of the research cycle can make use of blockchain (yellow arch); only the experiment/initial data collection itself cannot. From data collection onwards, the rest of the research circle would then become immutable, comprehensible, and externally provable. This would make larger parts of the research cycle open to scientific self-correction and may make more research results reproducible, true, and useful."
+\begin{itemize}
+\item scientific ideas/data/lab notebooks via time-stamping and proof of existence - Blockchains provide a ‘notarization’ functionality.
+\item pre-registration in open science, now managed by open platforms like OSF 
+\item The recommendation to reduce waste in science which reads: ‘Public availability of raw data and complete scripts of statistical analysis could be required by journals and funding agencies sponsoring new research’ [5,49] could be realized through blockchain. 
+to prevent vs publication bias (reporting only positive results) or p-hacking or ex-post-facto hypothesizing (changing the hypothesis after having looked into the data)
+\item stress on scientific self-correction: from open data science to blockchain based science 
+\end{itemize}
+"Figure 5: In closed science, scientists just publish a description of their research data and results in their final publication (I). Currently, researchers can publish their research data in data repositories, but that leaves no trace of the data collection or handling process (II). Of course, the final repository could be a blockchain based, decentralized database (III). However, blockchain technology could take the whole process one step further: the whole data handling process could take place in a blockchain system and would therefore be provable and open to scientific self-correction (at will) (IV)." 
+Blockchain systems make it possible to publish research anonymously [70] or with a second online identity - and yet one could still get money or other research impact appreciation for it [71,72]
+Science reputation systems can be built using blockchain without a trusted third party. 
+As such, a Decentralized Autonomous Academic Endorsement System has been proposed and interesting implementation ideas and next implementation steps have been disclosed [72].
+Research funding: A DARO (distributed autonomous research organization) allocates and distributes research resources.
+could also engage the public through a more transparent research process. 
+token economy could be applied to scientific ideas and groundbreaking discoveries, we could incentivise scientist to spread ideas early and strongly. This stands in contrast to the current system, which incentivises scientists to remain inert until publication, patent application, etc. It has been claimed that this could also be a solution to the famous innovators dilemma [9
+What should token for science/research projects represent? One thing would be ‘asset-backed’ tokens as described here [96] as a bet on the commercially usable part of the intellectual property. However, is that enough? Couldn't there be tokens that represent a purely scientific value of a research project? Researchers are used to immaterial rewards called “reputation”. For instance, I could place bets (as outlined below on relativity and will receive reputation tokens for properly predicting outcomes. I would also receive “reputation” if my own research results can be validated by “the crowd” or will be used by their future work, i.e. represent the equivalent of citations.)  
+The blockchain revolution is a game changer and hence chances are that this can be used to break with inappropriate cultures. Indeed, blockchain technology could be used to ‘Increase value and reduce waste’ [5], by opening the research cycle to scientific self-control beyond the final publication and might therefore be a fix to the current reproducibility crisis in science. 
+
+Through the blockchain, ownership of content is automatically established, and the use of content and the payment of royalties are executed through smart contracts in which the rights are stored."
+
+commercial landscape in scholarly communication. For example, the platforms allow micropayments t
+New Metrics Research on the blockchain could have a huge impact on the way researchers build their reputation and become recognised.The big advantage of a blockchain for research is that all activities of scientists can be automatically stored.Whenever a researcher uploads data, performs statistical analyses, writes and submits an article or reviews a manuscript, this is automatically tracked and recorded. By working on a blockchain, the risk of fraud is significantly reduced making it significantly easier to collect reliable and complete data on the performance of researchers, research groups and universities.This would allow for more sophisticated as well as reliable metrics to be built on top of that. Moreover, it will allow metrics to be based on activities that are currently not well recognised (e.g., peer review).
+Alternative Economic Models
+A blockchain for research could accompany the introduction of a cryptocurrency, which would add an economic layer to the blockchain. This ‘bitcoin for research’ could be used to make micro payments to publishers for consuming content, and could also introduce a monetary reward scheme to researchers themselves. For example, the blockchain could disintermediate publishers and reward authors directly with cryptocurrencies that can be used to purchase other content or services. It could also introduce rewards for research activities, such as peer review, statistical support, exchange of lab equipment, outsourcing specific research, or the hosting of data. Eventually, initial coin offerings (ICOs12), a form of crowdfunding using cryptocurrencies, could be used to fund entire research projects. In this way, a crypto economy could evolve in science reflecting the value merits of a number of activities.
+
+REWRITE
 An increasing body of voices in the scientific community has started to speak up for the need of updating current scientific practices with the advances represented by blockchain technology [2, 8]. As an example, we refer to a ‘manifesto’ written by a few anonymous authors, proposing a blockchain based system of academic endorsement (AES) [1]. Indeed, we could say that in general “specific blockchain characteristics meet the requirements of an open science infrastructure” [3-7]:
 \paragraph{Decentralisation}Taking out the need of intermediaries, would make useless depending on highly profiting publishing companies for disseminating scientific work and managing the rules of the peer-review process;
 \paragraph{Immutability} of the system in which information can only be appended with tamper proof-time stamping,  but not subsequently modified, would secure the intellectual property and a fairer measure of the scientific contribution of the actors at play during the multiple versions of a paper;
 \paragraph{Transparency} (meaning that we have a viewable record of all the papers and peer-reviews), would also make editorial decisions (publish or not publish a study) more transparent and democratic. Finally, cryptographic hashing could allow for a double-blind process that reduces human biases in judgement by assigning hashed pseudonymous to universal researcher identifiers. From all these aspects taken together, a more democratic open peer-review  process could rise, in which merit and power (of access to information, of decision…) is more equally redistributed among the stakeholders (researchers, reviewers, taxpayers).
+
 \newline The paper is structured as follows. Sections 2 presents research background and related works. Section 3 explains the proposed Ethereum-based protocol illustrating the system architecture and the current status of implementation. In Sect. 4 we discuss the implication of our work. Section 5 contains the conclusions. Appendixes present the smart contracts. 
 
 \section{Background}
 \subsection{Peer-review: a flawed and outdated system}
+
+"Peer review In recent years a lot of attention has been given to fundamental problems associated with the peer review process which lies at the heart of scholarly communication5,6,7.The perceived problems are multiple.There is a lack of visibility and recognition for reviewers, with their review work remaining largely unnoticed.Together, the increased number of manuscripts submitted to journals, and a subsequent need for more reviewers, leads to an increasing difficulty in finding suitable reviewers.Additionally, there is a perceived bias against women in the review process8.There are also cases of review manipulation, sometimes involving identity fraud which forced publishers to retract articles9. Overall, the review process is considered opaque and expensive, slowing down the speed of scientific discovery and progress."
+
 Peer-review is the traditional and necessary process at the heart of quality control in science [9, 12], determining the destinies of articles’ publications and therefore of scientific dissemination. However, the current peer-review system is outdated: in the past, it was effective when scholarly communication happened exclusively through printed paper journals, but nowadays, with the high and fast-paced levels of articles productions, its slow and multistage process doesn’t keep up with the times.
 \subsubsection{It's a slow multi-stage process.} Indeed, articles submitted to journals can take from months to years after editors’ first scrutiny, going back and forth several review rounds before acceptance for publications.
-\paragraph{Traditional peer-review process} This section takes inspiriration from the editorial processes at Nature Methods and Wiley.
+\paragraph{Traditional peer-review process} This section takes inspiration from the editorial processes at \emph{Nature Methods} and \emph{Wiley}.
 \begin{enumerate}
     \item The author submits a manuscript to the journal.
     \item  An editorial team  assesses the paper for what concerns the requirements of the journal's Author's Guideline (composition, sections...).
@@ -98,6 +142,8 @@ Rubriq provides independent and standardized peer review that can be accepted an
 \emph{Blockchain for Peer Review,}pilot project sponsored by Digital Science and Katalysis, aims at developing a protocol for storing peer reviews submitted by publishers on a blockchain such that review process can be independently verified and review info is fed to ORCID researcher profiles []
 \emph{ReviewCoin}
 \emph{I8X Platform}
+A more comprehensive reform of academic endorsement has been proposed in the manifesto ‘Towards Open Science:The Case for a Decentralized Autonomous Endorsement System11’, published anonymously.The author(s) propose a new academic endorsement system that is not based on current journal publication practices which are argued to be expensive, slow, disregard non-traditional output and negative results, and which give too much power to editors and publishers. Built on the blockchain, the Academic Endorsement System (AES) is based on a new form of currency, coined academic endorsement points (AEP), which can be used by scientists to reward scientific work that is worthy of endorsement. Moreover, the amount of AEP credited to a scientist is based on the AEP received for previous work. Researchers whose output has been endorsed to a high degree will have a larger influence in the community. Any kind of research output could be endorsed, for example blog posts, data sets, software etc.Another advantage is that this system would be faster than the time it takes for citation metrics to accrue.
+The startup Matryx.ai13 aims to transform the nature of research collaboration itself. Its initiators claim that one of the problems with current scientific practices is its incentive structure. Scientific awards, for example, are based on competition rather than on collaboration, despite the fact that new ideas are usually collaborative in nature. Moreover, different researchers and research groups are often working on the same problems, wasting, as they claim on their website,‘brain power’, time and money. Matryx intends to provide a platform enabling and incentivising research collaboration while discouraging solitary and siloed research. On Matryx, a research project starts when users set a bounty on a problem that they want the community to solve. Contributors solve these problems by working with each other on the platform.The collaboration is tracked through the blockchain thus ensuring contributors are credited appropriately when the problem is solved. In principle, everyone can contribute in the collaboration: scientists, PhD students and even enthusiastic amateurs.
 
 
 \subsection{Ideas here}
@@ -113,8 +159,9 @@ Here I expose the main traits/features of AR
 \item incentivisation: via symbolic and material recognition of the performed work. tokens and bounty
 \item inclusiveness via gamification: all the community is involved in the process - no selection process feeling of belonging -- quadratic voting and share of the stake
 \end{itemize}
-
+crowdfunding schemes leveraged by blockchain technology
 In the following sessions we describe the architecture of the system and its building blocks
+AntsReview [Fig.\ref{fig:contracts}] is a distributed peer-review system which synthesizes successful ideas from previous systems including The Bounty Network[ref], ERC20[ref], AZTEC Protocol[ref], IPFS[ref], Proof of Existence[ref], ...
 
 \subsection{Design}
 
@@ -129,7 +176,7 @@ There are two possible scenarios depending if we save the role of the editor and
     \item (footnote?) the bounty prize could correspond to part of the article submission fees and article publication fees requested to the authors by the journal.
     \item Reviews fulfilling the smart-contract requirements are validated by the journal editors.
     \item When the reviews are accepted (\emph{bounty fulfillment}), reviewers awarded a token called \emph{ANT}.
-    \item Not all reviews will have the same quality and depth. However, each of them might bring up one or more relevant contribution for the sake of improving the manuscript. In order to redistribute the bounty in a fair manner across reviewers, reviews will be voted by the editors with Quadratic Voting.********* POINT OF FAILURE? who votes?
+    \item Not all reviews will have the same quality and depth. However, each of them might bring up one or more relevant contribution for the sake of improving the manuscript. In order to redistribute the bounty in a fair manner across reviewers, reviews will be voted by Anters (members of the community) via Quadratic Voting to rank the most prolific peer-reviewers.
 
 \end{enumerate}
 
@@ -157,8 +204,6 @@ There are two possible scenarios depending if we save the role of the editor and
 \end{figure}
 In this section we provide an overview of how we implemented the system by focusing on its components.
 
-AntsReview [Fig.\ref{fig:contracts}] is a distributed peer-review system which synthesizes successful ideas from previous systems including The Bounty Network[ref], ERC20[ref], AZTEC Protocol[ref], IPFS[ref], Proof of Existence[ref], ...
-
 \newline The AntsReview Protocol is divided into stack of sub-protocols responsible for different functionality:
 
 \begin{enumerate}
@@ -169,7 +214,7 @@ AntsReview [Fig.\ref{fig:contracts}] is a distributed peer-review system which s
 
 \subsubsection{Bounty}
 
-AntsReview [\ref{appendix:b}] is the core of the smart contracts deployed on Ethereum Rinkeby's Testnet as shown in the flow-chart[img].
+AntsReview [\ref{appendix:b}] is the core of the smart contracts deployed on Ethereum Rinkeby's Testnet as shown in the flow-chart [Fig. \ref{fig:contracts}].
 \newline It implements a Bounty-like system where an issuer (author) is asked a series of actions, to ensure transparency and robustness, regarding the AntReview that he's creating:
 \begin{itemize}
   \item to upload the file containing the requirements of the peer-review and the paper into IPFS.
@@ -177,18 +222,18 @@ AntsReview [\ref{appendix:b}] is the core of the smart contracts deployed on Eth
   \item to send the amount of ether for the reward.
 \end{itemize}
 
-AntsReviewRoles[appendix A], to ensure integrity of the system, implements an access management, leveraging on AccessControl.sol by OpenZeppelin Library, through the creation of the Roles Issuer and Peer-Reviewer[code].
-\newline It also integrates a circuit breaker deisgn pattern via Pausable.sol by OpenZeppelin to allow the Pauser Role, that by default is the Owner of the Smart Contracts, to pause (or unpause) the functions in case of emergency.
+AntsReviewRoles[\ref{appendix:a}], to ensure integrity of the system, implements an access management, leveraging on AccessControl.sol by OpenZeppelin Library, through the creation of the Roles Issuer and Peer-Reviewer.
+\newline It also integrates a circuit breaker design pattern via Pausable.sol by OpenZeppelin to allow the Pauser Role, that by default is the Owner of the Smart Contracts, to pause (or unpause) the functions in case of emergency.
 \newline In this way, only the Issuer (author) can create a new AntReview.
 \newline Once created, an AntReview is available to be fulfilled by Peer-Reviewers, uploading the peer-review on IPFS before the deadline.
 \newline The AntReview after being validated is then accepted by the Issuer and paid equally between Peer-Reviewers.
 \newline Also, the Issuer can cancel the AntReview at any time and withdraw the amount of ether staked.
-\newline One of the key aspects of the protocol is the concept of Proof of Existence, introduced by Stuart Haber \& W. Scott Stornetta with the paper "How to time-stamp a digital document".
+\newline One of the key aspects of the protocol is the concept of Proof of Existence, introduced by Stuart Haber \& W. Scott Stornetta with the paper "How to time-stamp a digital document" \bibliography{}
 \newline As the pioneers of blockchain an cited by Bitcoin whitepaper, they were in a mission to solve the problem of immutability of digital records that became reality with the Blockchain and Bitcoin as its first application.
 \newline In Ethereum the concept of immutability is achieved via the blockchain and proof of work consesus algorithm by a chain of timestamped block hashes that are secured by miners competing computations.
 \newline AntsReview is evaluating the advantages of storing the hashes of the peer-reviews into a Merkle Tree to achieve immutability and efficiency in verifying the data with a complexity of O(logn) for searching through the tree.
 \newline A Merkle tree is a particular type of binary tree, formed by a set of nodes with a large set of leaf nodes at the bottom of the tree containing representing the hash of the original data, a set of intermediate nodes where each node is the sum of the two children hashes, ending with a single root hash.
-\newline In order to verify if a spefic hash is included into a Markle Tree, leveraging on MerkleProof.sol by OpenZeppelin Library, we need to provide a proof, generated from the leaf of interest, that rapresent the remification derived from the leaf, the root hash and finally the leaf we want to verify.
+\newline In order to verify if a specific hash is included into a Markle Tree, leveraging on MerkleProof.sol by OpenZeppelin Library, we need to provide a proof, generated from the leaf of interest, that represent the remification derived from the leaf, the root hash and finally the leaf we want to verify.
 \newline The paper and peer-review documents will be included into a Merkle Tree by hashing the data using keccak256, a cryptographic hashing algorithm available in Solidiy, an object-oriented programming language for writing smart contracts that run on the Ethereum Virtual Machine (EVM).
 
 \subsubsection{Tokenomics}
@@ -196,14 +241,14 @@ AntsReviewRoles[appendix A], to ensure integrity of the system, implements an ac
 AntsReview has few tokens, each of which plays an integral role in the functioning and anonymity of the decentralized protocol.
 \newline \textbf{Ant}, is the primary protocol token and can be staked into an AntReview if you wish to provide the protocol with an additional security promise.
 \newline Ant [\ref{appendix:c}] is implemented by inheriting ERC20PresetMinterPauser.sol from OpenZeppelin Library with name: \textbf{\emph{Ant}} ans symbol: \textbf{\emph{ANT}}.
-\newline An AntReview, issued by an author will be seen as a poll where Anters (members of the AntsReview Community) can stake ether or tokens from DeFi services including Dai, Chai, ... with the possibity to accrue interest for the duration of an AntReview (1 year on average), via MakerDAO DSR or Compound to cite a few.
-\newline An \textbf{AntsReview DAO} will be formed in the future to allow Ant stakers the ability to participates in a Decentralized Autonomous Organization which will be used to govern important aspects of the decentralized protocol, from smart contracts upgrades to more minor changes in settings accross the protocol.
-\newline \textbf{Hive}. When a Anter deposits into an AntReview, they will instantly receive the Hive token which represents their deposit and the accrued interest it gains over time in the AntReview.
+\newline An AntReview, issued by an author will be seen as a poll where Anters (members of the AntsReview Community) can stake ether or tokens from DeFi services including Dai, Chai, ... with the possibility to accrue interest for the duration of an AntReview (1 year on average), via MakerDAO DSR or Compound to cite a few.
+\newline An \textbf{AntsReview DAO} will be formed in the future to allow Ant stakers the ability to participates in a Decentralized Autonomous Organization which will be used to govern important aspects of the decentralized protocol, from smart contracts upgrades to more minor changes in settings across the protocol.
+\newline \textbf{Hive}. When an Anter deposits into an AntReview, they will instantly receive the Hive token which represents their deposit and the accrued interest it gains over time in the AntReview.
 \newline This token doesn't need to be locked in the network and it can be traded, sold, or held as the Anter desires.
-\newline Hive will be implemented using a similar approach to Ant and Chai, a token that accures interest from MakerDAO's DSR (Dai Saving Rate), with name: \textbf{\emph{Hive}} and symbol: \textbf{\emph{HIVE}}
-\newline Ideally, but is still under investigation, after the deadline of the AntReview is reached, the Hive token will be burned for Ant and wraped into zkAnt to allow anonymity and send equally to the peer-reviewers that fulfilled the AntReview.
+\newline Hive will be implemented using a similar approach to Ant and Chai, a token that accrues interest from MakerDAO's DSR (Dai Saving Rate), with name: \textbf{\emph{Hive}} and symbol: \textbf{\emph{HIVE}}
+\newline Ideally, but is still under investigation, after the deadline of the AntReview is reached, the Hive token will be burned for Ant and wrapped into zkAnt to allow anonymity and send equally to the peer-reviewers that fulfilled the AntReview.
 \newline \textbf{zkAnt}, is an Ant token wrapped into AZTEC Protocol ZK-SNARKs, that will be extended to PLONK Proof to collapse the gas costs of private transactions on mainnet.
-\newline zkAnt will be implemented via AZTEC 2.0 that will allow to securily wrap the Ant Token into zkAnt, allowing private transactions on mainnet and preserving the anonymity of Peer Reviewers.
+\newline zkAnt will be implemented via AZTEC 2.0 that will allow to securely wrap the Ant Token into zkAnt, allowing private transactions on mainnet and preserving the anonymity of Peer Reviewers.
 \newline Finally, another concept under investigation is Quadratic Funding, used by Gitcoin to match donations for Grants. This will allow to incentives prolific Peer-Reviewers and improve the stability of the system together with ideally a reward system to rank best Peer-Reviewers.
 
 \subsubsection{Privacy}
@@ -211,7 +256,7 @@ AntsReview has few tokens, each of which plays an integral role in the functioni
 The Anonymity of an agent in the system is achieved in two ways:
 
 \begin{itemize}
-  \item PseudoAnonimity granted by an Etherum's Externally Owned Accounts (EOA) address that can pseudo-obscure the identity of the agent.
+  \item PseudoAnonimity granted by an Ethereum's Externally Owned Accounts (EOA) address that can pseudo-obscure the identity of the agent.
   \item Private Transactions allowed by AZTEC Protocol security layer via zkAnt. Future developments will allow to leverage on PLONK Proofs to reduce gas costs and improve scalability.
 \end{itemize}
 
@@ -221,8 +266,8 @@ The Anonymity of an agent in the system is achieved in two ways:
 \newline The AZTEC Protocol was conceived to enable privacy on public blockchains. It uses ZK-SNARKS to validate encrypted transactions.
 \newline ZK-SNARKs (Zero-Knowledge Succinct Non-Interactive Argument of Knowledge) refers to a proof construction where one can prove possession of certain information, like a secret key, without revealing that information, and without any interaction between prover and verifier.
 \newline Zero-Knowledge proofs allow an actor (prover) to prove to another (verifier) that a statement is true, without revealing any information apart from the validity of the statement itself.
-\newline Future developements will investigate viable solutions, for scaling the system, like ZK-Rollups by AZTEC Protocol, one of the options being developed for a type of layer 2 construction that runs on top of Ethereum to improve scalability. This will enable to run smart contracts at scale with quasi-instant transactions while still being secured by Ethereum.
-\subsubsection{Privacy/anonymity}. To protect the contributors privacy, we would like to implement on the ANT token a fast, non-interactive type of zero-knowledge privacy protocol to enable private transactions on Ethereum. Zero-knowledge proof is a mathematical cryptographic method that through values permutations allows one party (the prover) to prove to another (the verifier) the veracity of a statement, without having to reveal what the statement is. We will use ZK-SNARKs (which stands for “Zero-Knowledge Succinct Non-Interactive Argument of Knowledge”) via the open source libraries of AZTEC protocol. AZTEC, now TURBOPLONK bla bla (faster?) combines the confidentiality of the transactions (the value of the transaction is hidden, the amount of token (?) is not revealed thus preventing biases in the peer-review quadratic voting process = "I want to bet on this review because I want to win the bounty") with general-purpose computation (it's a Turing-complete Virtual Machine): this means transaction are not limited just to the local cryptocurrency (in our case ANT) but cross-asset trades are allowed (I can exchange ANT tokesn with other crypto-currencies).
+\newline Future developments will investigate viable solutions, for scaling the system, like ZK-Rollups by AZTEC Protocol, one of the options being developed for a type of layer 2 construction that runs on top of Ethereum to improve scalability. This will enable to run smart contracts at scale with quasi-instant transactions while still being secured by Ethereum.
+\subsubsection{Privacy/anonymity}. To enhance the peer-reviewer's privacy, we would like to implement zkANT, an ERC20 token, Ant, wrapped into AZTEC Protocol ZK-SNARKs, a non-interactive type of zero-knowledge privacy protocol to enable private transactions on Ethereum. Zero-knowledge proof is a mathematical cryptographic method that through values permutations allows one party (the prover) to prove to another (the verifier) the veracity of a statement, without having to reveal what the statement is. We will use ZK-SNARKs (which stands for “Zero-Knowledge Succinct Non-Interactive Argument of Knowledge”) via the open source libraries of AZTEC protocol. AZTEC, now TURBOPLONK bla bla (faster?) combines the confidentiality of the transactions (the value of the transaction is hidden, the amount of token (?) is not revealed thus preventing biases in the peer-review quadratic voting process = "I want to bet on this review because I want to win the bounty") with general-purpose computation (it's a Turing-complete Virtual Machine): this means transaction are not limited just to the local cryptocurrency (in our case ANT) but cross-asset trades are allowed (I can exchange ANT tokesn with other crypto-currencies).
 \section{Discussions}
 \subsection{A new community-driven standard?}
 - a change is already happening: specially new born publishers are opening up review process (BioMed Central, ELife, Frontiers, PeerJ, F1000 Research) -- from 2020 also Nature declared that will do the same.
